--- a/css/loader.css
+++ b/css/loader.css
@@ -5,7 +5,7 @@
 	transform: translate(-50%, -50%);
 	color: #191919;
 	font-weight: 300;
-	z-index: 1000;
+	z-index: 250;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	
 }
