--- a/css/modal.css
+++ b/css/modal.css
@@ -3,7 +3,7 @@
 	background: rgba(0, 89, 183, 0.78);
     padding: 16px;
 	border-radius: 5px;
-	z-index: 300;
+	z-index: 250;
     color: #fafafa;
 	text-shadow: 1px 1px 1px #000;
 }
