--- a/css/navbar.css
+++ b/css/navbar.css
@@ -4,7 +4,7 @@
 	width: 100%;
     padding-top: 5px;
 	padding-bottom: 5px;
-	z-index: 1000;
+	z-index: 200;
 	margin-bottom: 30px;
 }
 
