--- a/css/quicksearch.css
+++ b/css/quicksearch.css
@@ -5,7 +5,7 @@
     position: absolute;
 	margin:auto;
 	top: 0; left: 0; bottom: 0; right: 0;
-	z-index: 555;
+	z-index: 250;
 }
 
 #search{
